--- a/package.json
+++ b/package.json
@@ -16,30 +16,36 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.3.1",
     "firebase-admin": "^13.1.0",
     "js-file-download": "^0.4.12",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "nodemailer": "^6.10.0",
     "nookies": "^2.5.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-qrcode-logo": "^3.0.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
