--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "15.1.7",
     "nodemailer": "^6.10.0",
     "nookies": "^2.5.2",
+    "papaparse": "^5.5.3",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -46,6 +47,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
+    "@types/papaparse": "^5.3.16",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
